--- a/WebApplication1/Views/Client/MajorInsert.cshtml
+++ b/WebApplication1/Views/Client/MajorInsert.cshtml
@@ -11,8 +11,8 @@
     <title>MajorInsert</title>
     <link rel="stylesheet"
           href="../../css/table.css" type="text/css">
-    <script src="~/Scripts/jquery-1.12.4.js"></script>
-    <script src="~/Scripts/vue-2.4.0.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/javascript/vue-2.4.0.js"></script>
 </head>
 <body>
 <div id="zwtj">
@@ -80,7 +80,7 @@
                     $.ajax({
                         url: "/Client/MajorInsert2",
                         type: "post",
-                        data: "MKID="+$("#MKID").val()+"&MCID="+$("#MCID").val(),
+                        data: "MKID=" + $("#MKID").val() + "&MCID=" + $("#MCID").val(),
                         success: function (msg) {
                             if (eval("" + msg + "")>0) {
                                 alert("新增成功")
@@ -94,6 +94,6 @@
             }
         });
     </script>
-
+    </div>
 </body>
 </html>
