--- a/WebApplication1/Views/Main/left.cshtml
+++ b/WebApplication1/Views/Main/left.cshtml
@@ -230,32 +230,32 @@
                         <ul>
                             <li>
                                 <span>
-                                    <a href="client/first_kind.html" target="mainFrame" style="color:black;">Ⅰ级机构设置</a>
+                                    <a href="../oneorganization/Selectoneorganization" target="mainFrame" style="color:black;">Ⅰ级机构设置</a>
                                 </span>
                             </li>
                             <li>
                                 <span>
-                                    <a href="client/second_kind.html" target="mainFrame" style="color:black;">Ⅱ级机构设置</a>
+                                    <a href="../twoorganization/Selecttwo" target="mainFrame" style="color:black;">Ⅱ级机构设置</a>
                                 </span>
                             </li>
                             <li>
                                 <span>
-                                    <a href="client/third_kind.html" target="mainFrame" style="color:black;">Ⅲ级机构设置</a>
+                                    <a href="../threeorganization/Selectthree" target="mainFrame" style="color:black;">Ⅲ级机构设置</a>
                                 </span>
                             </li>
                             <li>
                                 <span>
-                                    <a href="client/profession_design.html" target="mainFrame" style="color:black;">职称设置</a>
+                                    <a href="../Client/MajorChenIndex" target="mainFrame" style="color:black;">职称设置</a>
                                 </span>
                             </li>
                             <li>
                                 <span>
-                                    <a href="client/major_kind.html" target="mainFrame" style="color:black;">职位分类设置</a>
+                                    <a href="../Client/MajorKindIndex" target="mainFrame" style="color:black;">职位分类设置</a>
                                 </span>
                             </li>
                             <li>
                                 <span>
-                                    <a href="client/major.html" target="mainFrame" style="color:black;">职位设置</a>
+                                    <a href="../Client/MajorIndex" target="mainFrame" style="color:black;">职位设置</a>
                                 </span>
                             </li>
                             <li>
