--- a/WebApplication1/Views/Client/MajorChenIndex.cshtml
+++ b/WebApplication1/Views/Client/MajorChenIndex.cshtml
@@ -9,8 +9,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>MajorChenIndex</title>
-    <script src="~/Scripts/jquery-1.12.4.js"></script>
-    <script src="~/Scripts/vue-2.4.0.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/javascript/vue-2.4.0.js"></script>
     <link rel="stylesheet"
           href="../../css/table.css" type="text/css">
     <script type="text/javascript"
