--- a/WebApplication1/Views/Client/MajorInsert.cshtml
+++ b/WebApplication1/Views/Client/MajorInsert.cshtml
@@ -11,8 +11,8 @@
     <title>MajorInsert</title>
     <link rel="stylesheet"
           href="../../css/table.css" type="text/css">
-    <script src="~/Scripts/jquery-1.12.4.js"></script>
-    <script src="~/Scripts/vue-2.4.0.js"></script>
+    <script src="~/javascript/vue-2.4.0.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
 </head>
 <body>
 <div id="zwtj">
