--- a/WebApplication1/Views/Client/MajorKindIndex.cshtml
+++ b/WebApplication1/Views/Client/MajorKindIndex.cshtml
@@ -10,10 +10,11 @@
    
     <meta name="viewport" content="width=device-width" />
     <title>MajorKindIndex</title>
-    <script src="~/Scripts/jquery-1.12.4.js"></script>
-    <script src="~/Scripts/vue-2.4.0.js"></script>
+
     <link rel="stylesheet"
           href="../../css/table.css" type="text/css">
+    <script src="~/javascript/vue-2.4.0.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
    
 </head>
 <body>
