--- a/WebApplication1/Views/LuYong/LuYongShenPi.cshtml
+++ b/WebApplication1/Views/LuYong/LuYongShenPi.cshtml
@@ -342,9 +342,7 @@
                 </td>
                 <td colspan="7" class="TD_STYLE2">
                     <textarea name="JlGeRenLvLi" rows="4"
-                              class="TEXTAREA_STYLE1" readonly="readonly">
-                        @Model.JlGeRenLvLi
-                        </textarea>
+                              class="TEXTAREA_STYLE1" readonly="readonly">@Model.JlGeRenLvLi</textarea>
                     </td>
                 </tr>
                 <tr>
@@ -377,7 +375,7 @@
                     <td class="TD_STYLE1">
                         形象评价
                     </td>
-                    <td class="TD_STYLE2">
+                    <td class="TD_STYLE2"> 
                         <input type="text" name="MSXingXiangPingJia" readonly="readonly" value="@Model.MSXingXiangPingJia" class="SELECT_STYLE1" />
                     </td>
                     <td class="TD_STYLE1">
@@ -456,9 +454,7 @@
                     </td>
                     <td class="TD_STYLE2" colspan="7">
                         <textarea name="LYShengQing" class="TEXTAREA_STYLE1"
-                                  rows="4" readonly="readonly" id="LYShengQing">
-                            @Model.LYShengQing
-                            </textarea>
+                                  rows="4" readonly="readonly" id="LYShengQing">@Model.LYShengQing </textarea>
                         </td>
                     </tr>
                     <tr>
@@ -467,9 +463,7 @@
                         </td>
                         <td class="TD_STYLE2" colspan="7">
                             <textarea name="LYShengPi" id="LYShengPi" class="TEXTAREA_STYLE1"
-                                      rows="4" readonly="readonly">
-                                通过
-                            </textarea>
+                                      rows="4" readonly="readonly">通过</textarea>
                         </td>
                     </tr>
 
