--- a/WebApplication1/Views/resource/Updateesource.cshtml
+++ b/WebApplication1/Views/resource/Updateesource.cshtml
@@ -586,7 +586,7 @@
                     if (response== "1") {
                         //成功后跳转页面
                         alert("上传成功!");
-                        window.location.href = '/resource/Insertresource';
+                        window.location.href = '/resource/SelectMianshi';
                     }else{
                         alert("上传失败!");
                     }
