--- a/WebApplication1/Views/resource/SelectDelWhereTwos.cshtml
+++ b/WebApplication1/Views/resource/SelectDelWhereTwos.cshtml
@@ -19,7 +19,7 @@
         <table width="100%">
             <tr>
                 <td>
-                    <font color="black">您正在做的业务是：人力资源--人力资源档案管理--人力资源档案删除 </font>
+                    <font color="black">您正在做的业务是：人力资源--人力资源档案管理--人力资源档案永久删除 </font>
                 </td>
             </tr>
             <tr>
