--- a/WebApplication1/Views/resource/SelectresDel.cshtml
+++ b/WebApplication1/Views/resource/SelectresDel.cshtml
@@ -28,7 +28,7 @@
             <table width="100%">
                 <tr>
                     <td>
-                        <font color="black">您正在做的业务是：人力资源--人力资源档案管理--人力资源档案变更 </font>
+                        <font color="black">您正在做的业务是：人力资源--人力资源档案管理--人力资源档案删除 </font>
                     </td>
                 </tr>
                 <tr>
